7089632: assert(machtmp->outcnt() == 1) failed: expected for a MachTemp

Replace assert with check to delete MachTemp nodes only when they are really dead.

Reviewed-by: never